# base-template

./: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
deploy/compose/: compose-app.yaml  postgres.yaml
deploy/compose/api/: Dockerfile
src/application/account/commands/: account.py
src/application/account/dto/: __init__.py  transaction.py
src/application/account/queries/: account.py
src/application/commands/: account.py  base.py
src/application/common/: dto.py  event.py
src/application/common/pagination/: dto.py
src/application/events/: base.py
src/application/example/commands/: example.py
src/application/example/dto/: __init__.py  example_info.py
src/application/example/queries/: example.py
src/application/queries/: account.py
src/domain/account/: exceptions.py
src/domain/account/entities/: account.py
src/domain/common/entities/: aggregate_root.py
src/domain/common/exceptions/: base.py
src/domain/common/value_objects/: base.py
src/domain/entities/: account.py  base.py
src/domain/example/entities/: example.py
src/domain/example/value_objects/: address.py
src/domain/exceptions/: account.py  base.py
src/domain/values/: address.py  base.py
src/infrastructure/: init.py  uow.py
src/infrastructure/db/: uow.py
src/infrastructure/exceptions/: base.py  subscription.py
src/infrastructure/log/: main.py  processors.py
src/infrastructure/mediator/: __init__.py  base.py  command.py  event.py  exception.py  query.py
src/presentation/api/: __main__.py  main.py
src/settings/: config.py
(+22 files in other folders)
