[project]
name = "ForkintehLiquind"
version = "0.1.0"
description = "test"
authors = [
    {name = "ibash2",email = "ibragim.020205@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "punq (>=0.7.0,<0.8.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "tronpy (>=0.5.0,<0.6.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false